<?xml version="1.0" encoding="utf-8"?>

<!-- Name: Devin "Lauren" Elder --> 
<!-- Date: 09/18/2014 -->
<!-- Term: 1409 -->
<!-- Project Name: Widget App -->
<!-- Assignment: MDF3 Week 3 -->

<resources>

    <string name="app_name">Widget App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_item">Manage</string>
    <string name="form_label">Enter Information for your Grocery List</string>
    <string name="store_label">Store Name:</string>
    <string name="date_label">Date:</string>
    <string name="list_label">Grocery List:</string>
    <string name="store_hint">Wal-Mart</string>
    <string name="date_hint">09/15/2014</string>
    <string name="list_hint">Soup, Bananas, Pepsi, Bread, Tea, Strawberries</string>
    <string name="widget_hint">No Data Stored</string>
    <string name="widget_button">Add List</string>

</resources>
